assets/css/style.css
:root {
	--background: #F5F5DC;  /* Light beige */
}

body {
	margin: 0;
	padding: 0;
	background-color: var(--background);
	font-family: 'Poppins', sans-serif;
	color: #59473A;
}

img {
	float: left;
	width: 300px;
	margin-left: 15%;
	padding: 30px;
}

hr {
	margin: 40px 0px;

	border: 1px solid #E79D9D;
	border-radius: 5px;
}

.about {
	margin: 0;
	padding: 50px;
	overflow: auto;

	color: #F5F5DC;
	background-color: #bd4b4b;
}

.about p a:hover {
	color: white;
}

.about h1 {
	font-family: 'Balsamiq Sans', sans-serif;
	font-weight: 500;
	font-size: 40px;

	color: white;
}

.about button {
	padding: 10px 20px;
	font-family: 'Poppins', sans-serif;
	font-weight: 600;

	border-width: 0;
	border-radius: 20px;

	background-color: #688B58;
	color: white;

	filter: drop-shadow(0px 0px 30px rgba(240, 177, 118, 0.7));
	transition-duration: 0.4s;
}

.about button:hover {
	transform: scale(1.2);
}

.main-body {
	margin: 60px 15%;
}

.main-body h2 {
	font-family: 'Balsamiq Sans', sans-serif;

	color: #688B58;
}

.main-body .label {
	vertical-align: middle;
	font-weight: 600;

	color: #C83C3C;
}

.main-body .help {
	font-size: 8pt;
	color: #D96B6B;
}

.main-body input {
	margin: 10px 0px;
	padding: 10px;

	font-family: 'Poppins', sans-serif;
	font-weight: 500;

	border-width: 2px;
	border-style: solid;
	border-color: #E79D9D;
	border-radius: 40px;

	color: #D96B6B;

}

.main-body input:focus {
	font-weight: 700;
	outline: none;
	border-width: 4px;
}

.disabled, .disabled .label, .disabled .help {
	color: #aaa5a5;
}

.hidden {
	display: none;
}

#gh-link {
	font-weight: bolder;
	text-decoration: none;

	color: #F5F5DC;

	transition-duration: 0.3s;
}

#gh-link:after {
	margin: 0px 2px 0px 3px;
	background-image: url(/assets/logo/github-logo.svg);
	background-size: 18px 18px;
	display: inline-block;
	width: 18px;
	height: 18px;
	content: "";
}

#help-menu {
	position: absolute;
	left: 50%;
	width: 35%;
}

#help-menu-bar {
	padding: 10px;
	overflow: hidden;

	border-radius: 20px 20px 0px 0px;

	background-color: #bd4b4b;
	color: white;
}

#help-menu-bar-title {
	margin: 0;
	float: left;
	padding: 4px 8px;

	font-weight: bolder;
}

#help-menu-bar-close {
	float: right;
	display: inline-block;

	height: 20px;
	width: 20px;
	margin: 0px 10px;

	border-style: solid;
	border-width: 2px;
	border-radius: 200px;
	border-color: #E79D9D;

	font-weight: 700;

	vertical-align: middle;
	text-align: center;
	transition-duration: 0.3s;

	color: #f3bebe;
}

#help-menu-body {
	min-height: 128px;
	padding: 10px;

	font-size: smaller;
	border-radius: 0px 0px 20px 20px;
	
	background-color: #E79D9D;
	background: linear-gradient(139.64deg, #E79D9D 0.53%, #ecb4b4 124.82%);
}

#help-menu-body p {
	margin: 0;
	padding: 8px;
}

#help-menu-bar-title:hover {
	cursor: default;
}

#help-menu-bar-close:hover {
	cursor: pointer;
}

#gh-logo {
	display: inline-block;
	float: none;
	width: 20px;
	margin: 0px;
}

#submit-button {
	padding: 10px 20px;
	font-family: 'Poppins', sans-serif;
	font-size: 30px;
	font-weight: 600;
	width: 100%;

	border-width: 0;
	border-radius: 200px;

	background: linear-gradient(139.64deg, #688B58 0.53%, #92A863 124.82%);
	color: white;

	filter: drop-shadow(0px 0px 30px rgba(240, 177, 118, 0.7));
	transition-duration: 0.4s;
}

#submit-button:hover {
	transform: translateY(-10px);
}

